backend fixes openapi + story, web-app added handler (WIP)
